--- a/App_Mascotas/Vistas/MenuPrincipal.xaml
+++ b/App_Mascotas/Vistas/MenuPrincipal.xaml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App_Mascotas.Vistas.MenuPrincipal" Title="Menu Principal">
+             x:Class="App_Mascotas.Vistas.MenuPrincipal">
+    <NavigationPage.TitleView>
+        <Label Text="Menu Principal" FontSize="Medium" HorizontalTextAlignment="Center"/>
+    </NavigationPage.TitleView>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
